--- a/home/access-ud-directories-video.html
+++ b/home/access-ud-directories-video.html
@@ -93,11 +93,11 @@
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li><span style="color:#005294"><strong>Create</strong></span> a new environment.
+<li><span style="color:#005294"><strong>Create</strong></span> a new environment
 <br></li>
-<li>Create <span style="color:#005294"><strong>a user</strong></span> on the portal and add the public <span style="color:#005294"><strong>SSH key</strong></span>.
+<li>Create <span style="color:#005294"><strong>a user</strong></span> on the portal and add the public <span style="color:#005294"><strong>SSH key</strong></span>
 <br></li>
-<li>Connect via <span style="color:#005294"><strong>SFTP Client</strong></span>.
+<li>Connect via <span style="color:#005294"><strong>SFTP Client</strong></span>
 <br></li>
 <li>Check and use the <span style="color:#005294"><strong>Live folders</strong></span>:<ul>
 <li>default </li>
