--- a/home/add-features-to-environment-video.html
+++ b/home/add-features-to-environment-video.html
@@ -94,12 +94,12 @@
 <span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Add a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH</strong></span> key.
+<li>Add a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH</strong></span> key
 <br></li>
-<li><span style="color:#005294"><strong>Clone</strong></span> an environment in order create a <span style="color:#005294"><strong>local repository</strong></span>.
+<li><span style="color:#005294"><strong>Clone</strong></span> an environment in order create a <span style="color:#005294"><strong>local repository</strong></span>
 <br></li>
-<li><span style="color:#005294"><strong>Add files or packages</strong></span> to each related folder: <span style="color:#005294"><strong>addons, packages, plugins, updates, wsdls</strong></span> and <span style="color:#005294"><strong>client files</strong></span>.</li>
-<li><span style="color:#005294"><strong>Commit and push</strong></span> all elements to the environment repository.</li>
+<li><span style="color:#005294"><strong>Add files or packages</strong></span> to each related folder: <span style="color:#005294"><strong>addons, packages, plugins, updates, wsdls</strong></span> and <span style="color:#005294"><strong>client files</strong></span></li>
+<li><span style="color:#005294"><strong>Commit and push</strong></span> all elements to the environment repository</li>
 <li><span style="color:#005294"><strong>Deploy</strong></span> the elements by clicking the deploy button under the repository belonging to the environment.</li>
 </ul>
 <p><br></p>
