--- a/home/clone-environment-video.html
+++ b/home/clone-environment-video.html
@@ -80,22 +80,19 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<html>
- <body>
-<iframe src="https://www.youtube.com/embed/mTzfl_OYKVI" width="100%" height="400" frameborder="0" allowfullscreen=""></iframe>
- </body>
-</html>
-
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/n9OYdftOefw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+ 
+</p>
 <p><br></p>
-<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>3:35 minutes</strong>
+<p><span style="color:#005294"><strong>Total video time</strong></span>: <strong>3:32 minutes</strong>
 <br>
 <span style="color:#005294"><strong>Total demo time</strong></span>: <strong>~ 20 minutes</strong> (from which <strong>15 minutes</strong> the cloning of the environment)</p>
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>All the changes present on an environment are copied to a new identical environment through the <span style="color:#005294"><strong>cloning</strong></span> function.
+<li>All the changes present on an environment are copied to a new identical environment through the <span style="color:#005294"><strong>cloning</strong></span> function
 <br></li>
-<li>The environment must <span style="color:#005294"><strong>NOT</strong></span> be in one of the statuses: Stopping, Rebuilding, Scaling, Exporting or if it has a Warning.
+<li>The environment must <span style="color:#005294"><strong>NOT</strong></span> be in one of the statuses: Stopping, Rebuilding, Scaling, Exporting or if it has a Warning
 <br></li>
 <li>The cloning may take around <span style="color:#005294"><strong>15 minutes</strong></span>.</li>
 </ul>
