--- a/home/create-dev-env-video.html
+++ b/home/create-dev-env-video.html
@@ -93,12 +93,18 @@
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Create a <span style="color:#005294"><strong>new environment</strong></span>.</li>
-<li>Change environment <span style="color:#005294"><strong>name and description</strong></span>.</li>
-<li>Check <span style="color:#005294"><strong>Monitor Application</strong></span> endpoint.</li>
-<li>Check <span style="color:#005294"><strong>Go to Application</strong></span> endpoint to open a T24 instance.</li>
-<li>Generate an <span style="color:#005294"><strong>SSH key</strong></span> and attach it to a <span style="color:#005294"><strong>user</strong></span> on the portal.</li>
-<li><span style="color:#005294"><strong>Clone</strong></span> a repository using Tortoise Git.</li>
+<li>Create a <span style="color:#005294"><strong>new environment</strong></span>
+<br></li>
+<li>Change environment <span style="color:#005294"><strong>name and description</strong></span>
+<br></li>
+<li>Check <span style="color:#005294"><strong>Monitor Application</strong></span> endpoint
+<br></li>
+<li>Check <span style="color:#005294"><strong>Go to Application</strong></span> endpoint to open a T24 instance
+<br></li>
+<li>Generate an <span style="color:#005294"><strong>SSH key</strong></span> and attach it to a <span style="color:#005294"><strong>user</strong></span> on the portal
+<br></li>
+<li><span style="color:#005294"><strong>Clone</strong></span> a repository using Tortoise Git
+<br></li>
 <li>Use available <span style="color:#005294"><strong>buttons/ functions</strong></span>: stop, rebuild, scale (up and down), export and delete.</li>
 </ul>
 <p><br></p>
