--- a/home/fcm-configuration-video.html
+++ b/home/fcm-configuration-video.html
@@ -94,11 +94,16 @@
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Create <span style="color:#005294"><strong>new environment</strong></span> using <span style="color:#005294"><strong>FCM</strong></span> template.</li>
-<li>Check the <span style="color:#005294"><strong>endpoints</strong></span>: Financial Crime Mitigation and Interfaces Module.</li>
-<li>Create a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH key</strong></span>.</li>
-<li><span style="color:#005294"><strong>Connect to SFTP</strong></span> server with WinSCP client.</li>
-<li><span style="color:#005294"><strong>Drag a message</strong></span> to be processed into the appropriate folder.</li>
+<li>Create <span style="color:#005294"><strong>new environment</strong></span> using <span style="color:#005294"><strong>FCM</strong></span> template
+<br></li>
+<li>Check the <span style="color:#005294"><strong>endpoints</strong></span>: Financial Crime Mitigation and Interfaces Module
+<br></li>
+<li>Create a <span style="color:#005294"><strong>user</strong></span> on the portal and attach the public <span style="color:#005294"><strong>SSH key</strong></span>
+<br></li>
+<li><span style="color:#005294"><strong>Connect to SFTP</strong></span> server with WinSCP client
+<br></li>
+<li><span style="color:#005294"><strong>Drag a message</strong></span> to be processed into the appropriate folder
+<br></li>
 <li>Check <span style="color:#005294"><strong>Transaction Alert Manager</strong></span> from FCM application.</li>
 </ul>
 <p><br></p>
