--- a/home/jenkins-build-video.html
+++ b/home/jenkins-build-video.html
@@ -96,18 +96,21 @@
 <li>Create <span style="color:#005294"><strong>new environments</strong></span>:<ul>
 <li>Build environment</li>
 <li>Source environment</li>
-<li>Target environment</li>
+<li>Target environment
+<br></li>
 </ul>
 </li>
-<li>Login to <span style="color:#005294"><strong>Jenkins</strong></span> and change the password.</li>
-<li>Generate and save two pairs of public and private <span style="color:#005294"><strong>SSH keys</strong></span>.</li>
-<li>Create two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>portal</strong></span> and attach the public SSH keys.
+<li>Login to <span style="color:#005294"><strong>Jenkins</strong></span> and change the password
 <br></li>
-<li>Add the two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>GitLab</strong></span> and attach the related private SSH keys.
+<li>Generate and save two pairs of public and private <span style="color:#005294"><strong>SSH keys</strong></span>
 <br></li>
-<li>Add <span style="color:#005294"><strong>credentials</strong></span> in Jenkins dashboard.</li>
-<li>Configure the <span style="color:#005294"><strong>Pipeline Build</strong></span>.</li>
-<li>Click Pipeline &gt; Build.</li>
+<li>Create two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>portal</strong></span> and attach the public SSH keys
+<br></li>
+<li>Add the two <span style="color:#005294"><strong>users</strong></span> on the <span style="color:#005294"><strong>GitLab</strong></span> and attach the related private SSH keys
+<br></li>
+<li>Add <span style="color:#005294"><strong>credentials</strong></span> in Jenkins dashboard</li>
+<li>Configure the <span style="color:#005294"><strong>Pipeline Build</strong></span></li>
+<li>Click Pipeline &gt; Build</li>
 <li>Click Pipeline Promote Changes &gt; Build.</li>
 </ul>
 <p><br></p>
