--- a/home/manage-artifactory-test-cycle-video.html
+++ b/home/manage-artifactory-test-cycle-video.html
@@ -90,7 +90,7 @@
 <ul>
 <li>After setting-up a factory, go to Dashboard on the main menu and  (in case you have more factories).<span style="color:#005294"><strong>select the factory</strong></span> you created 
 <br></li>
-<li><span style="color:#005294"><strong>Click Run Now.</strong></span> 
+<li>Click <span style="color:#005294"><strong>Run Now.</strong></span> 
 <br></li>
 </ul>
 <p><br></p>
