--- a/home/setup-components-products-video.html
+++ b/home/setup-components-products-video.html
@@ -98,7 +98,7 @@
 <br></li>
 <li><span style="color:#005294"><strong>Fill</strong></span> the display name
 <br></li>
-<li><span style="color:#005294"><strong>Click</strong></span> create</li>
+<li><span style="color:#005294"><strong>Click</strong></span> create.</li>
 </ul>
 <p><br></p>
               <hr>
