--- a/home/setup-stages-video.html
+++ b/home/setup-stages-video.html
@@ -93,11 +93,15 @@
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li><span style="color:#005294"><strong>Set-up/ Create a stage</strong></span> 
+<li>Click on <span style="color:#005294"><strong>Stage</strong></span> button, make sure you select the <span style="color:#005294"><strong>Stream</strong></span> where you want to add a stage
 <br></li>
-<li><span style="color:#005294"><strong>Edit a stage</strong></span>
+<li>Click on <span style="color:#005294"><strong>New Stage</strong></span> button on top right
 <br></li>
-<li><span style="color:#005294"><strong>Delete a stage</strong></span></li>
+<li>Fill in the <span style="color:#005294"><strong>Name</strong></span>
+<br></li>
+<li>Fill in the <span style="color:#005294"><strong>Description</strong></span>
+<br></li>
+<li>Click <span style="color:#005294"><strong>Create</strong></span>.</li>
 </ul>
 <p><br></p>
               <hr>
