--- a/home/setup-streams-video.html
+++ b/home/setup-streams-video.html
@@ -80,7 +80,25 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p>Coming soon!</p>
+<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k7Lvfua5V4Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+ 
+</p>
+<p><br>
+<span style="color:#005294"><strong>Total video time</strong></span>: <strong>8:51 minutes</strong>
+<br></p>
+<p><span style="color:#005294"><strong>INFO</strong></span>:
+<br></p>
+<ul>
+<li>Click on  <span style="color:#005294"><strong>New Stream</strong></span> on the top right 
+<br></li>
+<li>Fill in the <span style="color:#005294"><strong>Name</strong></span>
+<br></li>
+<li>Fill in the <span style="color:#005294"><strong>Description</strong></span>
+<br></li>
+<li>Click the <span style="color:#005294"><strong>Enable option</strong></span>
+<br></li>
+<li>Click <span style="color:#005294"><strong>Create</strong></span>.</li>
+</ul>
 <p><br></p>
               <hr>
               
