--- a/home/setup-testcases-video.html
+++ b/home/setup-testcases-video.html
@@ -88,7 +88,7 @@
 <p><span style="color:#005294"><strong>INFO</strong></span>:
 <br></p>
 <ul>
-<li>Click on the New Component and <span style="color:#005294"><strong>Click</strong></span>  on the TestCases folder 
+<li>Click on the New Component and <span style="color:#005294"><strong>Click</strong></span>  on the Test Cases folder 
 <br></li>
 <li><span style="color:#005294"><strong>Click</strong></span> on the Deploy button
 <br></li>
@@ -96,7 +96,7 @@
 <br></li>
 <li>Choose <span style="color:#005294"><strong>a meaningful name</strong></span>  for your factory
 <br></li>
-<li><span style="color:#005294"><strong>Choose Single or Multi</strong></span> based on number of zip folders that you need to upload and drop or select the test cases zip file
+<li>Choose  <span style="color:#005294"><strong>Single or Multi</strong></span> based on number of zip folders that you need to upload and drop or select the test cases zip file
 <br></li>
 <li>Click on the <span style="color:#005294"><strong>Deploy</strong></span> button
 <br></li>
