--- a/home/setup-streams-video.html
+++ b/home/setup-streams-video.html
@@ -80,7 +80,7 @@
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
 
-<p><iframe width="560" height="315" src="https://www.youtube.com/embed/k7Lvfua5V4Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<p><iframe width="560" height="315" src="https://youtu.be/AzclW36kecM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
  
 </p>
 <p><br>
