--- a/home/toc.html
+++ b/home/toc.html
@@ -150,7 +150,7 @@
                       
                       <ul class="nav level3">
                         <li>
-                          <a href="jenkins-build-video.html" name="" title="Jenkins Build">Jenkins Build</a>
+                          <a href="./jenkins-build-video.md" name="" title="Jenkins Build">Jenkins Build</a>
                         </li>
                         <li>
                           <a href="create-dev-env-video.html" name="" title="Create and Manage Dev Enviroment">Create and Manage Dev Enviroment</a>
