--- a/home/tutorials-assemble.html
+++ b/home/tutorials-assemble.html
@@ -81,7 +81,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h3 id="assemble-tutorials">Assemble Tutorials</h3>
 
-<p>Coming soon!</p>
+<p>Check out our video tutorials!</p>
 <p><br></p>
               <hr>
               
