--- a/home/cloud-environments-customize-templates.html
+++ b/home/cloud-environments-customize-templates.html
@@ -94,16 +94,11 @@
 <br></p>
 <p>Actions on the environment:</p>
 <ul>
-<li><span style="color:#005294"><strong>Create</strong></span> </li>
-<li><span style="color:#005294"><strong>Delete</strong></span>  </li>
-<li><span style="color:#005294"><strong>Edit</strong></span> <em>(change name and description)</em></li>
-<li><span style="color:#005294"><strong>Export</strong></span> </li>
-<li><span style="color:#005294"><strong>Boost</strong></span></li>
 <li>Create a <span style="color:#005294"><strong>user</strong></span> and attach the<span style="color:#005294"><strong>SSH key</strong></span>.</li>
 <li><span style="color:#005294"><strong>Clone</strong></span> the environment using Tortoise Git.</li>
 <li>Check the <span style="color:#005294"><strong>environments</strong></span> folder &gt; Modify the <span style="color:#005294"><strong>infratemplate.yml</strong></span> and <span style="color:#005294"><strong>main.yml</strong></span> files.</li>
 <li><span style="color:#005294"><strong>Commit and push</strong></span> the changes to the repository.</li>
-<li><span style="color:#005294"><strong>Rebuild</strong></span>. </li>
+<li><span style="color:#005294"><strong>Rebuild</strong></span> the environment.</li>
 </ul>
 <p><br></p>
               <hr>
