--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -150,7 +150,7 @@
                       
                       <ul class="nav level3">
                         <li>
-                          <a href="./jenkins-build-video.md" name="" title="Jenkins Build">Jenkins Build</a>
+                          <a href="jenkins-build-video.html" name="" title="Jenkins Build">Jenkins Build</a>
                         </li>
                         <li>
                           <a href="create-dev-env-video.html" name="" title="Create and Manage Dev Enviroment">Create and Manage Dev Enviroment</a>
@@ -326,7 +326,7 @@
       
             <div class="col-md-6 footer-note right">
               <p>
-                Copyright &copy; 2019 Temenos Headquarters SA <span>&#183;</span>
+                Copyright &copy; 2017 Temenos Headquarters SA <span>&#183;</span>
                 <a target="_blank" href="https://www.facebook.com/TemenosGroup"><i class="fa fa-facebook" aria-hidden="true"></i></a> 
                 <a target="_blank" href="https://twitter.com/Temenos"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a target="_blank" href="http://www.linkedin.com/company/temenos"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
